External Editor Change Log

  9/14/2006 - 0.9.2 Release

    - Added 'skip_data' option to make External Editor send out only
      the metadata part and skip appending data to the 'body'.

    - Add a simple callback registry that can be used to add extra
      metadata headers or set special response headers when a file is
      edited through External Editor.

    - Use rfc822.Message for parsing the metadata of the file being
      edited.

    - Don't emit a warning about deprecated 'methods' in Zope >= 2.10.

    - Fixed acquisition issue in manage_main.dtml to sync up with the
      same fix applied to Zope.

  6/23/2005 - 0.9.1 Release

    - Older pyc files for plugins were included in the 0.9 release.
      This version has the most up to date plugins.

  6/20/2005 - 0.9 Release

    - When using the Excel plugin, errors were seen by users like
      "TypeError: This object does not support enumeration".  We now
      make the user deal with these.

    - When using the Excel plugin, errors were intermittently raised to the
      user in the form "Fatal error: <unknown>.Path" and the user could
      subsequently not save the document back to Zope because the
      external editor process had quit.

    - Changes to documents intermittently may not have been saved back to Zope
      when using any plugin that involved COM (Word, Excel, Powerpoint, etc).

    - If Word was exited before a user actively saved, if there were
      outstanding changes in the document being edited, those changes
      would not be saved to the server despite the user answering
      "yes" to the "do you want to save before you exit" dialog
      presented by Word.

    - The "title" attribute of the object being externally edited is
      now available within the set of headers returned by EE to the
      zopeedit client.

    - Detecting whether the client has External Editor installed from
      within IE using JavaScript or VBScript is now possible, assuming