@@ -16,7 +16,7 @@
 
 $Id$"""
 
-__version__ = '0.9.2'
+__version__ = '0.9.3'
 
 import sys
 
